Changed display: none to desktop media query, fixed role select overflow, adjusted add-member  modal height to prevent clipping on smaller mobile devices

--- a/frontend/client/styles/screens/manage_teams.scss
+++ b/frontend/client/styles/screens/manage_teams.scss
@@ -18,11 +18,10 @@
 }
 
 .mobile-msg {
-  display: none;
+  align-self: center;
 
-  @include media('<=phone') {
-    display: block;
-    align-self: center;
+  @include media('>phone') {
+    display: none;
   }
 }
 
